fixed jumping submit button
In some cases there was enough space between floating divs and error
messages, that the submit button jumped between them.

--- a/modules/Monoplane/assets/css/_form.scss
+++ b/modules/Monoplane/assets/css/_form.scss
@@ -48,6 +48,9 @@ fieldset {
       margin: 0 0 .5rem;
       padding: 0;
       vertical-align: top;
+      &:last-of-type { // contains submit button
+          text-align: center;
+      }
       @include breakpoint(medium) {
           width: 100%;
           float: left;
